# spg-opengl

./: CMakeLists.txt  Core.h  Drawable.h  LICENSE  Window.h  build.sh  main.cpp  setup.py
Abstracts/: View.h
Components/: Line.h  Square.h  Text.h
Components/Complex/: Button.h  Waveform.h
Components/Simple/: Line.h  Rectangle.h  Square.h  Text.h
Structures/: Color.h  Vec2.h
Views/: FilePicker.h
runConfigurations/: display-python.run.xml
src/: Core.h  main.cpp  main.py
src/Abstracts/: View.h
src/Components/Complex/: Button.h
src/Components/Simple/: Line.h  Rectangle.h  Square.h
src/Views/: FPSCounter.h  FilePicker.h
